Fix nav spacing on mobile

--- a/src/Bar.scss
+++ b/src/Bar.scss
@@ -1,5 +1,5 @@
 .bar {
-  height: 8vh;
+  height: 10vh;
   background-color: white;
   top: 0;
   display: flex;
