--- a/src/Home.scss
+++ b/src/Home.scss
@@ -1,5 +1,5 @@
 .home__content {
-  height: 72vh;
+  height: 70vh;
   width: 100vw;
   background-image: url("./images/hp-1.jpg");
   background-size: cover;
